--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -34,6 +36,8 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.2.0",
     "web-vitals": "^4.2.4"
-  }
+  },
+  "homepage": "https://liseche.github.io/website/"
 }
