--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
     "gh-pages": "^6.2.0",
     "web-vitals": "^4.2.4"
   },
-  "homepage": "https://liseche.github.io/"
+  "homepage": "https://lisechen.no"
 }
