--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,31 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "MyApp",
+  "name": "My Awesome React App",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "https://res.cloudinary.com/dg2t0sykk/image/upload/v1734309665/favicon_mspalq.ico",
+      "type": "image/x-icon",
+      "sizes": "16x16"
     },
     {
-      "src": "logo192.png",
+      "src": "https://res.cloudinary.com/dg2t0sykk/image/upload/v1734309665/favicon-32x32_g2cls4.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "32x32"
+    },
+    
+    {
+      "src": "https://res.cloudinary.com/dg2t0sykk/image/upload/v1734309664/apple-touch-icon_pmnhwi.png",
+      "type": "image/png",
+      "sizes": "180x180"
     },
     {
-      "src": "logo512.png",
+      "src": "https://res.cloudinary.com/dg2t0sykk/image/upload/v1734309665/android-chrome-512x512_a3h4ln.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "theme_color": "#000000"
 }
